# sqlite-cli

./: .gitignore  CODE_REVIEW_ISSUES.md  COORDINATION.md  FIXES_SUMMARY.md  README.md  README4HUMANS.md  USAGE.md  create_example_db.py  join_collective.py  pyproject.toml  requirements.txt  sqlite_cli.py  test_compadres.py
